# twelvedata-rs

./: Cargo.toml  LICENSE  README.md
crates/twelvedata/: Cargo.toml
crates/twelvedata/src/: lib.rs
crates/twelvedata/src/core/: conversion.rs  eod.rs  exchangerate.rs  marketmovers.rs  mod.rs  quote.rs  realtime.rs  timeseries.rs  types.rs
crates/twelvedata/src/internal/: request.rs
crates/twelvedata/src/mutualfunds/: mfslist.rs  mod.rs
crates/twelvedata/src/reference/: bonds.rs  cryptocurrencies.rs  cryptoexchanges.rs  earliesttimestamp.rs  etfs.rs  exchanges.rs  forex.rs  funds.rs  indices.rs  marketstate.rs  mod.rs  stocks.rs  symbolsearch.rs  technicalindicatiors.rs  types.rs
examples/testing/: Cargo.toml
examples/testing/src/: main.rs
