[package]
name = "twelvedata"
version = "0.6.4"
description = "A Rust client for the Twelve Data API"
repository = "https://github.com/mazylol/twelvedata-rs"
readme = "../../README.md"
keywords = ["twelvedata", "api", "client", "rust"]
categories = ["api-bindings", "finance"]
documentation = "https://docs.rs/twelvedata"
authors = ["Landon Porter <mazy@cock.li>"]
license = "MIT"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
